--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -11,17 +11,21 @@
 
   .container {
     width: 1400px;
+
     .top {
       display: flex;
       justify-content: space-between;
+
       .item {
         display: flex;
         flex-direction: column;
         gap: 20px;
+
         h2 {
           font-size: 16px;
           color: #555;
         }
+
         span {
           font-weight: 300;
         }
@@ -33,6 +37,7 @@
       height: 0;
       border: 1px solid #ebe9e9;
     }
+
     .bottom {
       display: flex;
       align-items: center;
@@ -49,6 +54,7 @@
           white-space: nowrap;
         }
       }
+
       .right {
         width: max-content;
         display: flex;
@@ -66,6 +72,49 @@
           gap: 10px;
         }
       }
+
+    }
+
+  }
+  /* 2xl */
+  @media (max-width: 786px) {
+    .container {
+      max-width: 786px;
+    }
+  }
+
+  /* xl */
+  @media (max-width: 1280px) {
+    .container {
+      max-width: 1024px;
+    }
+  }
+
+  /* lg */
+  @media (max-width: 1024px) {
+    .container {
+      max-width: 768px;
+    }
+  }
+
+  /* md */
+  @media (max-width: 768px) {
+    .container {
+      max-width: 640px;
+    }
+  }
+
+  /* sm */
+  @media (max-width: 640px) {
+    .container {
+      max-width: 475px;
+    }
+  }
+
+  /* xs */
+  @media (max-width: 475px) {
+    .container {
+      width: 100%;
     }
   }
 }
