--- a/src/components/orders/Orders.scss
+++ b/src/components/orders/Orders.scss
@@ -52,4 +52,46 @@
       }
     }
   }
-}
+    /* 2xl */
+    @media (max-width: 786px) {
+      .container {
+        max-width: 786px;
+      }
+    }
+    
+    /* xl */
+    @media (max-width: 1280px) {
+      .container {
+        max-width: 1024px;
+      }
+    }
+    
+    /* lg */
+    @media (max-width: 1024px) {
+      .container {
+        max-width: 768px;
+      }
+    }
+    
+    /* md */
+    @media (max-width: 768px) {
+      .container {
+        max-width: 640px;
+      }
+    }
+    
+    /* sm */
+    @media (max-width: 640px) {
+      .container {
+        max-width: 475px;
+      }
+    }
+    
+    /* xs */
+    @media (max-width: 475px) {
+      .container {
+        width: 100%;
+      }
+    }
+  }
+
