update navBar and fix signin and signup

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -81,6 +81,10 @@
           color: gray;
         }
       }
+      li{
+        list-style-type: none;
+
+      }
 
       button {
         color: rgb(107, 46, 248);
