refactoring once the user clicks on a service

--- a/src/Pages/Servicee/Servicee.scss
+++ b/src/Pages/Servicee/Servicee.scss
@@ -121,6 +121,7 @@
                 border-radius: 5px;
                 border: 1px solid gray;
                 padding: 10px;
+                color: rgb(21, 16, 97)
               }
             }
           }
@@ -285,7 +286,7 @@
         }
   
         button{
-          background-color: #1dbf73;
+          background-color: rgb(21, 16, 97);
           padding: 10px;
           color: white;
           font-weight: 500;
