add notifications show error

--- a/src/pages/Signup/signup.scss
+++ b/src/pages/Signup/signup.scss
@@ -133,6 +133,7 @@ input:checked + .slider:before {
   .register {
     flex-direction: column;
     align-items: center;
+    margin: 0%;
   }
 
   .signup-image {
