--- a/src/pages/Signin/signin.scss
+++ b/src/pages/Signin/signin.scss
@@ -6,7 +6,15 @@
   background-image: url("../../assets/next.jpg");
   background-size: cover;
 }
-
+.logo {
+  font-size: 34px;
+  font-weight: bold;
+  text-align: start;
+  margin-bottom: 30px ;
+  text-decoration: none;
+  color: #2196f3;
+}
+ 
 .signup-image {
   max-width: 100%;
   height: 100%;
