--- a/src/pages/Signup/signup.scss
+++ b/src/pages/Signup/signup.scss
@@ -109,7 +109,14 @@ button {
   transition: 0.4s;
   border-radius: 50%;
 }
-
+.logo {
+  font-size: 34px;
+  font-weight: bold;
+  text-align: start;
+  margin-bottom: 30px ;
+  text-decoration: none;
+  color: #2196f3;
+}
 input:checked + .slider {
   background-color: #2196f3;
 }
