--- a/src/Pages/ApplicantDetails/ApplicantDetails.scss
+++ b/src/Pages/ApplicantDetails/ApplicantDetails.scss
@@ -1,14 +1,13 @@
-.applicant-button-container {
-    display: flex;
-    gap: 10px; /* Add spacing between buttons */
-  }
-  
-  .accept-button {
+.accept-button {
     background-color: blue; /* Blue background for the "Accept" button */
     color: white;
     border: none;
     padding: 5px 10px;
     cursor: pointer;
+  
+    &:hover {
+      background-color: lightblue; /* Change the background color on hover */
+    }
   }
   
   .reject-button {
@@ -17,10 +16,9 @@
     border: none;
     padding: 5px 10px;
     cursor: pointer;
-  }
   
-  .accept-button:hover,
-  .reject-button:hover {
-    background-color: #fff; /* Change the background color on hover */
+    &:hover {
+      background-color: #ff9999; /* Change the background color on hover */
+    }
   }
   
