--- a/src/pages/Signup/signup.scss
+++ b/src/pages/Signup/signup.scss
@@ -31,7 +31,7 @@ form {
   justify-content: center;
   border: 2px solid #000;
   border-radius: 25px;
-  background-color: aliceblue;
+  // background-color: aliceblue;
   padding-left: 20px;
 }
 
