--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -1,17 +1,19 @@
 .home {
   .features {
-    background-color: #cfd7f4;
+    //    
     display: flex;
     justify-content: center;
     padding: 100px 0;
+    background-color: #171E69;
 
     .container {
       width: 100%;
       max-width: 1400px;
       display: flex;
-      flex-wrap: wrap;  // Enable wrapping on smaller screens
+      flex-wrap: wrap; 
       align-items: center;
       gap: 20px;
+   
 
       .item {
         flex: 1;
@@ -20,13 +22,13 @@
         gap: 15px;
 
         img {
-          width: 100%;
+          // width: 100%;
           max-width: 100%;  
         }
         .image{
           border-radius: 20%;
           background-color: white;
-        }
+        } 
 
         h1 {
           font-weight: 500;
@@ -50,7 +52,7 @@
         p {
           font-size: 18px;
           font-weight: 300;
-          color: gray;
+          color: rgb(255, 255, 255);
           line-height: 28px;
           letter-spacing: 1px;
         }
@@ -159,11 +161,17 @@
     }
 
     @media (max-width: 768px) {
-      // Adjust styles for screens smaller than 768px (e.g., phones)
+      padding: 0%;
+      margin: 0;
+      width: fit-content;
       .container {
-        flex-direction: column;  // Stack items on smaller screens
-        padding: 40px 0;  // Adjust padding for smaller screens
+        flex-direction: column;  
+        padding: 4px 0;  
       }
+     
+    
     }
+
+
   }
 }
