--- a/src/pages/Signup/signup.scss
+++ b/src/pages/Signup/signup.scss
@@ -4,7 +4,16 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background: url("../../assets/next.jpg") center/cover;
+  background-color: white;
+
+  form {
+    background-color: white;
+    width: 80%; /* Reduce the width of the form */
+    padding: 20px; /* Add some padding for better spacing */
+    border-radius: 15px; /* Round the corners a bit */
+    display: flex;
+    flex-direction: column;
+  }
 }
 body{
   margin: 0;
@@ -31,7 +40,7 @@ form {
   justify-content: center;
   border: 2px solid #000;
   border-radius: 25px;
-  background-color: aliceblue;
+  background-color: rgb(255, 255, 255);
   padding-left: 20px;
 }
 
@@ -53,7 +62,7 @@ input,
 textarea {
   padding: 10px;
   border: 1px solid rgb(216, 214, 214);
-  width: 100%;
+  width: 35%;
 }
 
 button {
@@ -148,7 +157,7 @@ input:checked + .slider:before {
     width: 100%;
     margin-left: 0;
     flex-direction: column-reverse;
-    border-radius: 0;
+    border-radius: 50px;
   }
 
   .left {
