--- a/src/Pages/userApplicants/UserApplicants.scss
+++ b/src/Pages/userApplicants/UserApplicants.scss
@@ -1,3 +1,13 @@
+.user-applicants-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 auto;
+  width: 50%;
+  margin-top: 20px; /* Adjust the top margin as needed */
+  margin-bottom: 20px; /* Adjust the bottom margin as needed */
+ 
+}
 .user-applicants-table {
     width: 80%;
     border-collapse: collapse;
