--- a/src/Pages/AddService/AddService.scss
+++ b/src/Pages/AddService/AddService.scss
@@ -1,99 +1,97 @@
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
 .add {
-    display: flex;
-    justify-content: center;
-  
-    .container {
-      width: 1400px;
-      padding: 50px 0px;
-      max-width: 1400px;
-  
-      h1 {
-        width: max-content;
-        margin-bottom: 15px;
+  display: flex;
+  justify-content: center;
+
+  .container {
+    width: 1400px;
+    padding: 8rem 0;
+    max-width: 1400px;
+    margin-top: -100px;
+
+    h1 {
+      width: max-content;
+      margin-bottom: 1.5rem;
+      color: gray;
+      font-weight: 300;
+    }
+
+    .sections {
+      display: flex;
+      justify-content: space-between;
+      gap: 4rem;
+      flex-wrap: wrap;
+
+      label {
         color: gray;
-        font-weight: 300;
+        font-size: 1rem;
       }
-  
-      .sections {
+
+      .info,
+      .details {
+        flex: 1;
         display: flex;
-        justify-content: space-between;
-        gap: 100px;
-        flex-wrap: wrap;
-  
-        label {
-          color: gray;
-          font-size: 18px;
+        flex-direction: column;
+        gap: 1rem;
+        width: 100%;
+
+        input,
+        select,
+        textarea {
+          width: 100%;
+          padding: 1rem;
+          border: 1px solid #d1d1d1; /* Add a border for better visibility */
         }
-  
-        .info,
-        .details {
-          flex: 1;
-          display: flex;
-          flex-direction: column;
-          gap: 10px;
-          width: 100%; 
-          // justify-content: space-between;
-  
-          input,
-          select,
-          textarea {
-            width: 100%;
-            padding:10px;
-          }
-  
-          button {
-            border: none;
-            padding: 20px;
-            color: white;
-            font-weight: 500;
-            font-size: 18px;
-            background-color: #0d084d;
-            cursor: pointer;
-          }
+
+        button {
+          border: none;
+          padding: 1rem;
+          color: white;
+          font-weight: 500;
+          font-size: 1rem;
+          background-color: #0d084d;
+          cursor: pointer;
         }
       }
     }
-      /* 2xl */
+  }
+
   @media (max-width: 786px) {
     .container {
       max-width: 786px;
     }
   }
-  
-  /* xl */
+
   @media (max-width: 1280px) {
     .container {
       max-width: 1024px;
     }
   }
-  
-  /* lg */
+
   @media (max-width: 1024px) {
     .container {
       max-width: 768px;
     }
   }
-  
-  /* md */
+
   @media (max-width: 768px) {
     .container {
       max-width: 640px;
     }
   }
-  
-  /* sm */
+
   @media (max-width: 640px) {
     .container {
       max-width: 475px;
     }
   }
-  
-  /* xs */
+
   @media (max-width: 475px) {
     .container {
       width: 100%;
     }
   }
 }
-  
-  
