--- a/src/Pages/AddService/AddService.scss
+++ b/src/Pages/AddService/AddService.scss
@@ -15,8 +15,9 @@
     h1 {
       width: max-content;
       margin-bottom: 1.5rem;
-      color: gray;
-      font-weight: 300;
+      color: rgb(95, 93, 93);
+      font-weight: bold;
+      font-size: 30px;
     }
 
     .sections {
