--- a/src/Pages/Profile/profile.scss
+++ b/src/Pages/Profile/profile.scss
@@ -1,11 +1,149 @@
-.bg-main-color {
-    background-color: var(--main-color);
-}
+/* Profile.scss */
 
-.text-main-color {
-    color: var(--main-color);
-}
-
-.border-main-color {
-    border-color: var(--main-color);
-}
+.container {
+    max-width: 1200px;
+    margin: auto;
+    padding: 20px;
+  }
+  
+  .profile-card {
+    background-color: #fff;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  }
+  
+  .profile-image {
+    position: relative;
+    overflow: hidden;
+    border-radius: 50%;
+    margin: 0 auto 20px;
+    width: 150px;
+    height: 150px;
+  
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  
+    input[type="file"] {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      opacity: 0;
+      cursor: pointer;
+    }
+  
+    span {
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      color: #333;
+      cursor: pointer;
+  
+      svg {
+        vertical-align: middle;
+        margin-right: 5px;
+      }
+    }
+  }
+  
+  .profile-info {
+    text-align: center;
+  
+    h1 {
+      font-size: 24px;
+      margin-bottom: 10px;
+      color: #333;
+    }
+  
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+  
+      li {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 10px 0;
+        border-bottom: 1px solid #ddd;
+  
+        &:last-child {
+          border-bottom: none;
+        }
+  
+        span {
+          font-size: 16px;
+          color: #555;
+  
+          &:hover {
+            color: #007bff;
+            cursor: pointer;
+          }
+        }
+      }
+    }
+  }
+  
+  .edit-form {
+    display: flex;
+    flex-direction: column;
+  
+    input,
+    textarea {
+      margin-bottom: 10px;
+      padding: 10px;
+      border: 1px solid #ddd;
+      border-radius: 5px;
+    }
+  
+    button {
+      background-color: #007bff;
+      color: #fff;
+      padding: 12px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+  
+      &:hover {
+        background-color: #0056b3;
+      }
+    }
+  }
+  
+  .services {
+    margin-top: 40px;
+  
+    h1 {
+      font-size: 28px;
+      margin-bottom: 20px;
+      color: #333;
+    }
+  
+    .service-card {
+      background-color: #fff;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      padding: 20px;
+      margin-bottom: 20px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  
+      h2 {
+        font-size: 18px;
+        margin-bottom: 10px;
+        color: #333;
+      }
+  
+      p {
+        font-size: 16px;
+        color: #555;
+      }
+    }
+  }
+  
