fixing bugs & adjusting style

--- a/src/Pages/AddService/AddService.scss
+++ b/src/Pages/AddService/AddService.scss
@@ -1,98 +1,77 @@
-@import 'tailwindcss/base';
-@import 'tailwindcss/components';
-@import 'tailwindcss/utilities';
-
 .add {
   display: flex;
   justify-content: center;
+  margin-top: -80px;
+  
 
   .container {
-    width: 1400px;
-    padding: 8rem 0;
-    max-width: 1400px;
-    margin-top: -100px;
+    width: 100%;
+    max-width: 800px;
+    padding: 4rem 2rem;
 
     h1 {
-      width: max-content;
       margin-bottom: 1.5rem;
-      color: rgb(95, 93, 93);
+      color: #0a1485;
       font-weight: bold;
-      font-size: 30px;
+      font-size: 2rem;
     }
 
     .sections {
       display: flex;
-      justify-content: space-between;
-      gap: 4rem;
-      flex-wrap: wrap;
+      flex-direction: column;
+      gap: 2rem;
+      border: 2px solid #0a1485;
+      padding: 2rem;
+      border-radius: 10px;
 
       label {
-        color: gray;
+        color: #0a1485;
         font-size: 1rem;
+        margin-bottom: 0.5rem;
       }
 
       .info,
       .details {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
         width: 100%;
+        margin: 5px;
 
         input,
         select,
         textarea {
           width: 100%;
           padding: 1rem;
-          border: 1px solid #d1d1d1; /* Add a border for better visibility */
+          border: 1px solid #d1d1d1;
+          border-radius: 0.25rem;
+          transition: border-color 0.3s ease;
+
+          &:focus {
+            outline: none;
+            border-color: #0a1485;
+          }
+        }
+
+        textarea {
+          resize: vertical;
         }
 
         button {
+          width: 70%;
           border: none;
           padding: 1rem;
-          color: white;
+          color: #fff;
           font-weight: 500;
           font-size: 1rem;
-          background-color: #0d084d;
+          background-color: #0a1485;
+          margin-top: 20px;
+          margin-left: 100px;
           cursor: pointer;
+          transition: background-color 0.3s ease;
+
+          &:hover {
+            background-color: #0a1485;
+          }
         }
       }
-    }
-  }
-
-  @media (max-width: 786px) {
-    .container {
-      max-width: 786px;
-    }
-  }
-
-  @media (max-width: 1280px) {
-    .container {
-      max-width: 1024px;
-    }
-  }
-
-  @media (max-width: 1024px) {
-    .container {
-      max-width: 768px;
-    }
-  }
-
-  @media (max-width: 768px) {
-    .container {
-      max-width: 640px;
-    }
-  }
-
-  @media (max-width: 640px) {
-    .container {
-      max-width: 475px;
-    }
-  }
-
-  @media (max-width: 475px) {
-    .container {
-      width: 100%;
     }
   }
 }
