--- a/src/Pages/Payment/Payment.scss
+++ b/src/Pages/Payment/Payment.scss
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Your Chosen Font', sans-serif; /* Add your preferred font-family */
-    background-image: url('https://d12oja0ew7x0i8.cloudfront.net/images/news/ImageForNews_60434_16684422066092818.jpg'); /* Replace 'your-background-image.jpg' with the actual image file path */
+    background-image: url('https://t3.ftcdn.net/jpg/04/85/99/36/360_F_485993644_E1dTYYezw3ruKxoNR0kLwR2Z1yRvKjtV.jpg'); /* Replace 'your-background-image.jpg' with the actual image file path */
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -15,7 +15,7 @@
       }
       
       h1 {
-        color: #ffffff;
+        color: #000000;
       }
       
       .amount {
