--- a/src/components/Search/Search.scss
+++ b/src/components/Search/Search.scss
@@ -37,6 +37,7 @@
             display: flex;
             align-items: center;
             gap: 10px;
+            color: black;
             img {
               width: 20px;
               height: 20px;
