--- a/src/Pages/messagesDetails/MessagesDetails.scss
+++ b/src/Pages/messagesDetails/MessagesDetails.scss
@@ -1,24 +1,38 @@
 /* MessagesDetails.scss */
 
-.active {
+.user-item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
 
-    display: flex;
-    margin-top: 20px;
-    .item{
-        margin-bottom: 29px;
-        font-size: large;
-    }
-      img {
-        width: 50px; 
-        height: 50px; 
-        margin-right: 10px; 
-        border-radius: 50%; 
-
-      }
-  
-      .message-link {
-        text-decoration: none; /* Optional: Remove underline from the link */
-      }
-    
+  .user-image {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-right: 10px;
   }
-  
+
+  .user-details {
+    display: flex;
+    flex-direction: column;
+
+    .user-name {
+      font-size: 16px;
+      font-weight: bold;
+      margin-bottom: 5px;
+      color: #fff; /* Set text color to white */
+    }
+
+    .message-link {
+      text-decoration: none;
+      color: #fff;
+      font-weight: bold;
+      transition: color 0.3s ease;
+
+      &:hover {
+        color: #0056b3;
+      }
+    }
+  }
+}
