--- a/src/Pages/ApplicantDetails/ApplicantDetails.scss
+++ b/src/Pages/ApplicantDetails/ApplicantDetails.scss
@@ -31,11 +31,31 @@
       height: 100%;
       object-fit: cover;
     }
+    .user-Message{
+      width: 48px;
+      margin-left: 5px;
+      // height: 48px;
+      // border-radius: 50%;
+      // overflow: hidden;
+      // margin-right: 10px;
+      // box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+    .user-Message img {
+      width: 50%;
+      height: 50%;
+      object-fit: cover;
+    }
+
 
     .user-name {
       font-weight: bold;
       font-size: 16px;
       color: #333;
+    }
+    .userMessage img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
   }
 
@@ -122,4 +142,5 @@
       }
     }
   }
+
 }
