--- a/src/Pages/message/Message.scss
+++ b/src/Pages/message/Message.scss
@@ -48,7 +48,7 @@
             max-width: 400px;
             border-radius: 20px 0px 20px 20px;
             background-color: #ffffff;
-            color: white;
+            color: #333;
           }
         }
 
