--- a/src/Pages/messagesDetails/MessagesDetails.scss
+++ b/src/Pages/messagesDetails/MessagesDetails.scss
@@ -26,7 +26,7 @@
 
     .message-link {
       text-decoration: none;
-      color: #fff;
+      color: black;
       font-weight: bold;
       transition: color 0.3s ease;
 
