--- a/src/Pages/userApplicants/UserApplicants.scss
+++ b/src/Pages/userApplicants/UserApplicants.scss
@@ -4,6 +4,7 @@
   align-items: center;
   margin: 20px auto;
   max-width: 800px;
+  margin-bottom: 17%;
 
   .user-applicants-table {
     width: 100%;
